Made independent of web mount point. And cleaned out some unused code

--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -3,8 +3,8 @@
 <TITLE>{{ title }}</TITLE></HEAD>
 <BODY>
 <h1>Field Prime Server Management</h1>
-<a href='{{ g.homepage }}'>Home</a>
-<button style="color: red" onClick="window.location='{{g.homepage}}?op=login'">Login as Different User</button>
+<a href='{{ g.rootUrl }}'>Home</a>
+<button style="color: red" onClick="window.location='{{g.rootUrl}}?op=login'">Login as Different User</button>
 <hr>
 
 
