--- a/fpa/fp_web_admin/templates/login.html
+++ b/fpa/fp_web_admin/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <CENTER>
-<FORM method="POST" action="{{ g.homepage }}">
+<FORM method="POST" action="{{ g.rootUrl }}">
 <paragraph> Enter your login name: <input type="text" name="username">
 <paragraph> Enter your password: <input type=password name="password">
 <paragraph> <input type="submit" value="Connect">
