--- a/fpa/fp_web_admin/templates/newTrial.html
+++ b/fpa/fp_web_admin/templates/newTrial.html
@@ -3,7 +3,7 @@
 <html><body>
 <font color="red">{{msg}}</font>
 <h2>Create New Trial</h2>
-<form enctype="multipart/form-data" action="{{g.homepage}}?op=createTrial" method="post">
+<form enctype="multipart/form-data" action="{{g.rootUrl}}?op=createTrial" method="post">
 Name: <input type="text" name="name"><br>
 Site: <input type="text" name="site"><br>
 Year: <input type="text" name="year"><br>
