modified login page

--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -3,8 +3,10 @@
 <TITLE>{{ title }}</TITLE></HEAD>
 <BODY>
 <h1>Field Prime Server Management</h1>
+{% block homeAndLogin %}
 <a href='{{ g.rootUrl }}'>Home</a>
 <button style="color: red" onClick="window.location='{{g.rootUrl}}?op=login'">Login as Different User</button>
+{% endblock %}
 <hr>
 
 
