--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -4,8 +4,8 @@
 <BODY>
 <h1>Field Prime Server Management</h1>
 {% block homeAndLogin %}
-<a href='{{ g.rootUrl }}'>Home</a>
-<button style="color: red" onClick="window.location='{{g.rootUrl}}?op=login'">Login as Different User</button>
+<a href='{{g.rootUrl}}?op=home'>Home</a>
+<button style="color: red" onClick="window.location='{{g.rootUrl}}'">Login as Different User</button>
 {% endblock %}
 <hr>
 
