--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -1,10 +1,33 @@
 {% extends "base.html" %}
-{% block content %}
-<h2>Create New Trait</h2><form enctype="multipart/form-data" action="{{g.rootUrl}}?op=createTrait&tid={{trialId}}" method="post">
-Caption: <input type="text" name="caption">
-<p>Description: <input type="text" name="description">
-<p><div id="traitDiv">Trait Type: <select name='type' onchange="SetTraitFormElements('traitDiv',this.options[selectedIndex].value)">
 
+{% block javascript %}
+function validateTraitForm()
+{
+  var cap = document.getElementById("cap_id").value;
+  if (cap == null || cap == "") {
+    alert("Please provide a caption");
+    return false;
+  }
+  var selVal = document.getElementById("traitType").value;
+  //var selVal = e.options[e.selectedIndex].value;
+  if (selVal < 0) {
+    alert("Please select a trait type");
+    return false;
+  }
+}
+{% endblock %}
+
+{% block content %}
+<h2>Create New Trait</h2>
+<form enctype="multipart/form-data"
+  action="{{g.rootUrl}}?op=createTrait&tid={{trialId}}"
+  onsubmit="return validateTraitForm()"
+  method="post">
+Caption: <input type="text" id='cap_id' name="caption">
+<p>Description: <input type="text" name="description">
+<p><div id="traitDiv">Trait Type: <select id='traitType' name='type' onchange="SetTraitFormElements('traitDiv',this.options[selectedIndex].value)">
+
+<option value="-1" name="none">..Select a Trait Type..</option>
 {% for typ, value in traitTypes.iteritems() %}
   <option value="{{value|e}}" name={{typ|e}}>{{typ|e}}</option>
 {% endfor %}
@@ -12,6 +35,5 @@ Caption: <input type="text" name="caption">
 </select></div>
 <p><input type="submit" value="Create Trait">
 </form>
-
 {% endblock %}
 
