--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h2>Create New Trait</h2>
+<div id="attributeData" data-attributes="{{attributesList}}">
 <form enctype="multipart/form-data"
   action="{{g.rootUrl}}?op=createTrait&tid={{trialId}}"
   onsubmit="return ValidateTraitForm()"
