--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -8,9 +8,20 @@
   onsubmit="return ValidateTraitForm()"
   method="post">
 
-<p>Trial Plan CSV File: <input type="file" id='uploadFile_id' name="file"></p>
-<p><input type="submit" value="Upload"></p>
+Caption: <input type="text" id='cap_id' name="caption">
+<p>Description: <input type="text" name="description">
+<p><div id="traitDiv">
+Trait Type: <select id='traitType' name='type'
+onchange="SetTraitFormElements('traitDiv',this.options[selectedIndex].value)">
+<option value="-1" name="none">..Select a Trait Type..</option>
+{% for typ, value in traitTypes.iteritems() %}
+  <option value="{{value|e}}" name={{typ|e}}>{{typ|e}}</option>
+{% endfor %}
+
+</select></div>
+<p><input type="submit" value="Create Trait">
 
 </form>
 {% endblock %}
+
 
