--- a/fpa/fp_web_admin/templates/downloadApp.html
+++ b/fpa/fp_web_admin/templates/downloadApp.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Download App</h2>
 
-To download the app, right click on the link and select "Save As":
+To download the app, right click on the link and select "Save Link As":
 <p>
 <a href={{ url_for('static', filename='fieldprime.apk') }}>FieldPrime App Version X</a>
 {% endblock %}
