--- a/fpa/fp_web_admin/templates/login.html
+++ b/fpa/fp_web_admin/templates/login.html
@@ -6,6 +6,8 @@
 #}
 {% endblock %}
 {% block content %}
+Welcome to FieldPrime
+<!--
 <CENTER>
 <FORM method="POST" action="{{ g.rootUrl }}">
 <paragraph> Enter your login name: <input type="text" name="username">
@@ -13,6 +15,6 @@
 <paragraph> <input type="submit" value="Connect">
 </FORM>
 </CENTER>
-</form>
+-->
 {{ msg }}
 {% endblock %}
