--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -5,62 +5,228 @@ padding: 0;
 }
 */
 
+button {
+    color:green;
+}
+input[type=submit] {
+    color:green;
+}
+
+/*** header: *********************************************************/
+
 #header {
 	background-color: #eee;
 	border-bottom: 1px solid #000000;
-	padding: 25px 0px;
+	padding: 10px 0px;
+    height:100px;
 }
 
-/** Logo **/
-#header .logo {
-	float: left;
-	margin-right: 20px;
-}
-#header .logo a {
-	background: url(fpIcon.png) no-repeat center top;
-	color: #000;
-	display: block;
-	font: 15px/30px 'Play';
-	/*height: 20px;
-	width: 76px;*/
-	padding-top: 68px;
-	text-decoration: none;
-	text-transform: uppercase;
+#header img{
+    float: left;
+    height:100px;
+    width:100px;
+    /* max-height:100%;
+    max-width:100%; */
 }
 
-#icon {
-    max-height:100%;
-    max-width:100%;
-}
-
-/** Navigation **/
-#navigation {
-	display: inline-block;
+/*** HeaderMenu: *********************************************************/
+#headerMenu {
+    /*float: right
+	display: inline-block;*/
 	list-style: none;
-	line-height: 100px;
+	/*line-height: 100px;*/
 	margin: 0;
 	padding: 0;
 }
-#navigation ul {
+#headerMenu ul {
 	display: inline-block;
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
-#navigation li {
+#headerMenu li {
 	float: left;
-	width: 160px;
-	text-align: center;
+	width: 100px;
+	/*text-align: center;*/
 }
-#navigation li a {
+#headerMenu li a {
 	color: #818181;
-	font-size: 15px;
+	/*font-size: 15px;*/
 	line-height: 30px;
 	text-decoration: none;
 }
-#navigation li a:hover {
+#headerMenu li a:hover {
 	color: #000;
 }
-#navigation li.active a {
+#headerMenu li.active a {
 	color: #f99600;
+}
+
+/*------------------------------ CONTENTS ------------------------------*/
+#contents {
+	min-height: 510px;
+	width: 880px;
+	margin: 0 auto;
+	padding: 54px 40px;
+	list-style: none;
+
+}
+.date {
+	float: left;
+	height: 78px;
+	width: 70px;
+	margin-right: 20px;
+	border: 1px solid #d5d5d5;
+	text-align: center;
+}
+.date p {
+	margin: 12px 0 0;
+}
+.date p span {
+	display: block;
+	font-size: 30px;
+	margin-bottom: 6px;
+}
+/** main **/
+.main {
+	float: left;
+	background: url(../images/divider.png) repeat-y right top;
+	min-height: 100px;
+	width: 620px;
+	padding-right: 24px;
+}
+.main h1, .sidebar h1 {
+	margin: 0 0 12px;
+	position: relative;
+	top: -18px;
+}
+.main h2 span {
+	display: block;
+	font-size: 12px;
+}
+
+.news {
+	list-style: none;
+}
+.news ul {
+	list-style: none;
+}
+.news li {
+	border-top: 1px solid #d5d5d5;
+	padding: 24px 30px 0 100px;
+	position: relative;
+}
+.news li .date {
+	float: none;
+	position: absolute;
+	left: 0;
+	top: 30px;
+}
+.news li > p span, .post > span {
+	display: block;
+	text-align: right;
+}
+
+h1 {
+	color: #3e3e3e;
+	font-size: 30px;
+	font-weight: normal;
+	line-height: 30px;
+	margin: 0 0 30px;
+}
+h2 {
+	color: #2c2c2c;
+	font-size: 24px;
+	font-weight: normal;
+	line-height: 24px;
+	margin: 0 0 12px;
+}
+p {
+	color: #585858;
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0 0 30px;
+}
+p a {
+	color: #585858;
+}
+#tagline h1 {
+	margin-left: 20px;
+}
+#tagline > div {
+	float: left;
+	width: 400px;
+	margin: 0 20px;
+}
+#contents .features {
+	width: 810px;
+	margin: 0 auto;
+}
+.features > div {
+	display: inline-block;
+	margin: 0 0 30px;
+}
+.features > div img {
+	float: left;
+	margin-right: 20px;
+	margin-top: 36px;
+}
+
+.posts {
+	border-top: 1px solid #d5d5d5;
+}
+.posts li {
+	border-bottom: 1px solid #d5d5d5;
+	padding: 24px 10px 0;
+}
+.posts li p {
+	font-size: 14px;
+}
+.posts li .title {
+	font-size: 16px;
+	font-weight: normal;
+	margin: 0 0 12px;
+}
+.posts li .title a {
+	color: #2c2c2c;
+	font-size: 16px;
+	text-decoration: none;
+}
+.post {
+	width: 785px;
+	margin: 0 auto;
+}
+.post h1 {
+	padding-top: 12px;
+}
+#about {
+	width: 740px;
+	margin: 0 auto;
+}
+#about h1, .section h1 {
+	border-bottom: 1px solid #e0e0e0;
+	padding-bottom: 12px;
+}
+.section {
+	float: left;
+	width: 390px;
+	margin-right: 50px;
+}
+.section h1 {
+	margin-bottom: 18px;
+}
+
+
+.contact {
+	background-color: #f8f8f8;
+	width: 270px;
+	padding: 124px 60px;
+	text-align: center;
+}
+.contact p span {
+	color: #2c2c2c;
+	display: block;
+	font-size: 30px;
+	line-height: 36px;
+	padding: 18px 0;
 }
