--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -11,9 +11,13 @@
   <div id="header">
     <img src="{{ url_for('static', filename='fpIcon.png') }}">
     <b>CSIRO FieldPrime Server</b><br>
-    <!-->
+
+    {# Determine if anyone is logged in: #}
+    {% set loggedIn = (g.userName and g.userName != 'unknown') %}
+
+    {# Login fields, or name of logged in user and logout button: #}
     <div id="loginout">
-      {% if not g.userName or g.userName == 'unknown' %} <!-- If there is NO user logged in: -->
+      {% if not loggedIn %} <!-- If there is NO user logged in: -->
       <FORM method="POST" action="{{ g.rootUrl }}">
         <b>Signin:</b>
         <paragraph> User name: <input type="text" name="username">
@@ -25,27 +29,25 @@
       <button  onClick="window.location=' {{ url_for('logout') }}'">Logout</button>
       {% endif %}
     </div>
-<!-- class="active" -->
+
+    {#
+    Header Menu - note Home href depends on login state. 
+    Note also we assume that if variable pagename is defined then 
+    it specifies the page, and if not defined we are on the Home menu options
+    #}
 	<ul id="headerMenu">
-      {% if not g.userName or g.userName == 'unknown' %} <!-- If there is NO user logged in: -->
-	  <li class="active"><a href="/">Home</a></li>
-	  <li  {% block news %}{% endblock %}><a href="{{ url_for('infoPage', pagename='news') }}">News</a></li>
-	  <li><a href="about.html">About</a></li>
-	  <li><a href="contact.html">Contact</a></li>
-      {% else %} <!-- If there IS a user logged in: -->
-	  <li class="active"><a href="{{ url_for('userHome', userName=g.userName) }}">Home</a></li>
-	  <li><a href="{{ url_for('infoPage', pagename='news') }}">News</a></li>
-	  <li><a href="about.html">About</a></li>
-	  <li><a href="contact.html">Contact</a></li>
+
+      {# Add UserData page if use is logged in: #}
+      {% if loggedIn %}
+	  <li {% if pagename is not defined %} class="active" {% endif %}>
+        <a href={{ url_for('userHome', userName=g.userName) }}>User Data</a>
+      </li>
       {% endif %}
-    <div>
-      {% block homeAndLogin %}
-      <!--   Not used now, replaced by login stuff in header:
-      <a href="{{ url_for('userHome', userName=g.userName) }}">Home</a>
-      <button style="color: red" onClick="window.location='{{g.rootUrl}}'">Login as Different User</button>
-      -->
-      {% endblock %}
-    </div>
+      
+	  <li {% if pagename == 'fieldprime' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='fieldprime') }}">FieldPrime</a></li>
+	  <li {% if pagename == 'news' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='news') }}">News</a></li>
+	  <li {% if pagename == 'about' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='about') }}">About</a></li>
+	  <li {% if pagename == 'contact' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='contact') }}">Contact</a></li>
   </div>
   <!-- <hr> -->
 
