--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -10,11 +10,11 @@ class="active"
 				<li>
 					<div class="date">
 						<p>
-							<span>14/3</span>
+							<span>14/2</span>
 							2014
 						</p>
 					</div>
-					<h2>Updates: New website look <span>Michael Kirk</span></h2>
+					<h2>New website look <span>Michael Kirk</span></h2>
 					<p>
 						Added this news section, contact page and so on.
                         <!-- If you need to link to more..
@@ -22,20 +22,38 @@ class="active"
                         -->
 					</p>
 				</li>
-                <!--
+                
 				<li>
 					<div class="date">
 						<p>
-							<span>03</span>
-							2023
+							<span>7/2</span>
+							2014
 						</p>
 					</div>
-					<h2>Updates: More Features Released <span>Brian Ferry</span></h2>
+					<h2>FieldPrime app version 0.1 released <span>Michael Kirk</span></h2>
 					<p>
-						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
+					  New version of the app with quite a few changes,
+					  including:
+                      <ul>
+                        <li>
+                          When you open a trial, there is now a browse
+                          mode as well as a score mode, the browse
+                          mode allows you to view all the current
+                          scores and notes on the device (or some
+                          subset of them you can select), and the
+                          score mode is as it was before. You swipe
+                          the screen left or right to switch between
+                          these.
+                        <li>
+                          The number of property widgets can be
+                          modified. By default it is still 2, but you
+                          can change this from a menu accessed by
+                          touching the FieldPrime logo in the top left
+                          of the screen.
+                      </ul>
 					</p>
 				</li>
-                -->
+                
 			</ul>
 		</div>
 	</div>
