--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "dataPage.html" %}
 
-{% block content %}
+{% block dataContent %}
 <h2>Create New Trait</h2>
 <div id="attributeData" data-attributes="{{attributesList}}">
 <form enctype="multipart/form-data"
