--- a/fpa/fp_web_admin/templates/uploadAttributes.html
+++ b/fpa/fp_web_admin/templates/uploadAttributes.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "dataPage.html" %}
 
-{% block content %}
+{% block dataContent %}
 <font color="red">{{msg}}</font>
 <h2>Reload Attributes</h2>
 Select a file containing attribute data.
