--- a/fpa/fp_web_admin/templates/about.html
+++ b/fpa/fp_web_admin/templates/about.html
@@ -5,20 +5,32 @@
 			<h1>About FieldPrime</h1>
 			<h2>History</h2>
 			<p>
-				FieldPrime was designed and developed in the Computation Biology unit of CSIRO Plant Industry. It's initial purpose was
-                to support the data collection and management needs for various field trials of wheat lines run by Colin Cavanagh.
-                The software is however broadly applicable to many situations requiring the collection and location of data, and hence
-                is made available on request for not-for-profit use, subject to approval.
+				FieldPrime was designed and developed in the Computation Biology unit of CSIRO Plant Industry. It's initial
+                purpose was to support the data collection and management needs for various field trials of wheat lines run by
+                Dr Colin Cavanagh.  The software is, however, broadly applicable to many situations requiring the collection and
+                location of data, and hence is made available on request for not-for-profit use, subject to approval.
 			</p>
-			<h2>Software</h2>
-			<p>
-				The FieldPrime Android App, and the FieldPrime Server software were written by a harmless drudge.
-			</p>
+
 			<h2>Current Version Details</h2>
 			<p>
 				Latest FieldPrime App verion: 1.0<br>
                 Latest FieldPrime Server version: 0.0<br>
 			</p>
+
+			<h2>Credits</h2>
+            FieldPrime was produced by CSIRO Plant Industry Computational Biology
+            <h3>Software Architect/Author</h3>
+ 				The FieldPrime Android App, and the FieldPrime Server software were written by
+                <a href="mailto:***REMOVED***?subject=FieldPrime Management Server">Dr Michael Kirk</a>.
+            <h3>Specification, Ideas, and Testing</h3>
+            <li>Colin Cavanagh
+            <li>Alexandre Boyer
+            <li>Scott Chapman
+            <li>Kathy Dibley
+            <li>Michael Kirk
+            <li>Aswin Singaram Natarajan
+            <li>Stuart Stephen
+            <li>Jen Taylor       
 		</div>
 	</div>
 {% endblock %}
