--- a/fpa/fp_web_admin/templates/fieldprime.html
+++ b/fpa/fp_web_admin/templates/fieldprime.html
@@ -13,8 +13,8 @@ class="active"
             was to collect phenotype data for large field trials of
             wheat varieties.
             <p> The software consists of the FieldPrime Android app -
-            which is used for the data collection. And the FieldPrime
-            server, which is used to store and manage the trial data.
+            which is used for the data collection - and the FieldPrime
+            Server, which is used to store and manage the trial data.
 
 
 		</div>
