--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -10,6 +10,25 @@ class="active"
 				<li>
 					<div class="date">
 						<p>
+							<span>25/2</span>
+							2014
+						</p>
+					</div>
+					<h2>Please add your contact details <span>Michael Kirk</span></h2>
+					<p>
+						For users with a login, there's now a place to add a contact name
+                        and email address for the account (under the "Profile/Passwords" link
+                        on the left hand side once you log in. Please add a name and email 
+                        address here so that we can contact you if necessary.
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+					</p>
+				</li>
+                
+				<li>
+					<div class="date">
+						<p>
 							<span>14/2</span>
 							2014
 						</p>
