--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -18,7 +18,7 @@ class="active"
 					<p>
 						For users with a login, there's now a place to add a contact name
                         and email address for the account (under the "Profile/Passwords" link
-                        on the left hand side once you log in. Please add a name and email 
+                        on the left hand side once you log in). Please add a name and email 
                         address here so that we can contact you if necessary.
                         <!-- If you need to link to more..
                         <span><a href="??.html" class="more">Read More</a></span>
