--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -1,9 +1,3 @@
-/*
-* {
-margin: 0;
-padding: 0;
-}
-*/
 
 button {
     color:green;
@@ -20,10 +14,11 @@ input[type=submit] {
     max-width: 500px;
 }
 
-/*** header: *********************************************************/
-
+/*** header: *********************************************************
+ * Style for the header across the top of all pages.
+ */
 #header {
-	background-color: #eee;
+	background-color: #eeeeee;
 	border-bottom: 1px solid #000000;
 	padding: 10px 0px;
     height:100px;
@@ -37,7 +32,7 @@ input[type=submit] {
     max-width:100%; */
 }
 
-/*** HeaderMenu: *********************************************************/
+/*** HeaderMenu: ***/
 #headerMenu {
     /*float: right
 	display: inline-block;*/
@@ -64,7 +59,7 @@ input[type=submit] {
 	text-decoration: none;
 }
 #headerMenu li a:hover {
-	color: #000;
+	color: #000000;
 }
 #headerMenu li.active a {
 	color: #f99600;
@@ -116,12 +111,12 @@ input[type=submit] {
 .news {
 	list-style: none;
 }
-/*
-.news ul {
-	list-style: none;
-}
-*/
 .news>li {
+	border-top: 1px solid #d5d5d5;
+	padding: 24px 30px 0 100px;
+	position: relative;
+}
+.news>li>li {
 	border-top: 1px solid #d5d5d5;
 	padding: 24px 30px 0 100px;
 	position: relative;
@@ -135,6 +130,9 @@ input[type=submit] {
 .news li > p span, .post > span {
 	display: block;
 	text-align: right;
+}
+.news li {
+	color: #585858;
 }
 
 /*******************************************/
@@ -153,6 +151,7 @@ h2 {
 	line-height: 24px;
 	margin: 0 0 12px;
 }
+
 p {
 	color: #585858;
 	font-size: 16px;
@@ -184,33 +183,6 @@ p a {
 	margin-top: 36px;
 }
 
-.posts {
-	border-top: 1px solid #d5d5d5;
-}
-.posts li {
-	border-bottom: 1px solid #d5d5d5;
-	padding: 24px 10px 0;
-}
-.posts li p {
-	font-size: 14px;
-}
-.posts li .title {
-	font-size: 16px;
-	font-weight: normal;
-	margin: 0 0 12px;
-}
-.posts li .title a {
-	color: #2c2c2c;
-	font-size: 16px;
-	text-decoration: none;
-}
-.post {
-	width: 785px;
-	margin: 0 auto;
-}
-.post h1 {
-	padding-top: 12px;
-}
 #about {
 	width: 740px;
 	margin: 0 auto;
@@ -246,7 +218,7 @@ p a {
 /*** footer: ********************************/
 #footer {
     clear:both;
-	background-color: #eee;
+	background-color: #eeeeee;
 	border-top: 1px solid #000000;
 	padding: 10px 0px;
     height:30px;
