--- a/fpa/fp_web_admin/templates/about.html
+++ b/fpa/fp_web_admin/templates/about.html
@@ -5,7 +5,7 @@
 			<h1>About FieldPrime</h1>
 			<h2>History</h2>
 			<p>
-				FieldPrime was designed and developed in the Computation Biology unit of CSIRO Plant Industry. It's initial
+				FieldPrime was designed and developed in the Computation Biology unit of CSIRO Plant Industry. Its initial
                 purpose was to support the data collection and management needs for various field trials of wheat lines run by
                 Dr Colin Cavanagh.  The software is, however, broadly applicable to many situations requiring the collection and
                 location of data, and hence is made available on request for not-for-profit use, subject to approval.
