--- a/fpa/fp_web_admin/templates/dataPage.html
+++ b/fpa/fp_web_admin/templates/dataPage.html
@@ -15,11 +15,14 @@
     {{navContent|safe}}
   </div>
 
-  <div id="dataContent">
+  <div class="dataContent">
   {% block dataContent %}
     {{content|safe}}
   {% endblock %}
   </div>
+
+  {% block dataHelp %}
+  {% endblock %}
 
 </div>
 {% endblock %}
