--- a/fpa/fp_web_admin/templates/newTrial.html
+++ b/fpa/fp_web_admin/templates/newTrial.html
@@ -14,19 +14,118 @@ function validateTrialForm()
     return false;
   }
 }
+
+var helpVisible;
+window.onload = function() {
+  helpVisible = true;
+  toggleHelp();
+}
+function toggleHelp()
+{
+  var d, m, e, hb;
+  e = document.getElementById('helpText');
+  hb = document.getElementById('helpButton');
+  if (helpVisible) {
+    e.style.display = 'none';
+    hb.textContent = "Show Help";
+    m = '0px';
+  }
+  else {
+    e.style.display = 'block';
+    hb.innerHTML = "Hide Help";
+    m = '170px';
+  }
+  helpVisible = !helpVisible;
+}
 {% endblock %}
 
 {% block dataContent %}
 <font color="red">{{msg}}</font>
-<h2>Create New Trial</h2>
+<div class=dataContentTop>
+  <div class=dataContent>
+    <h2>Create New Trial</h2>
+  </div>
+  <div class=dataContentHelpButton>
+    <button onclick='toggleHelp()' id='helpButton' style='float:right;'>Show Help</button>
+  </div>
+</div>
+<!--
+ <h2>Create New Trial</h2>
+<button onclick='toggleHelp()' id='helpButton'
+        style='float:right;'>Show Help</button>
+ -->
 <form enctype="multipart/form-data"
   onsubmit="return validateTrialForm()"
   method="post">
-Name: <input type="text" id='name_id' name="name"><br>
-Site: <input type="text" name="site"><br>
-Year: <input type="text" name="year"><br>
-Acronym: <input type="text" name="acronym"><br>
-<p>Trial Plan CSV File: <input type="file" id='uploadFile_id' name="file"></p>
-<p><input type="submit" value="Upload"></p>
+  <div class="userInputForm">
+    <fieldset>
+      <table>
+        <tr>
+          <td >
+            <label>Name<span class="small">Add a trial name (mandatory)</span></label>
+          </td>
+          <td >
+            <input type="text" id='name_id' name="name">
+          </td>
+        </tr>
+        <tr>
+          <td >
+            <label>Site<span class="small">(optional)</span></label>
+          </td>
+          <td >
+            <input type="text" name="site"><br>
+          </td>
+        </tr>
+        <tr>
+          <td >
+            <label>Year<span class="small">(optional)</span></label>
+          </td>
+          <td >
+            <input type="text" name="year"><br>
+          </td>
+        </tr>
+        <tr>
+          <td >
+            <label>Acronym<span class="small">(optional)</span></label>
+          </td>
+          <td >
+            <input type="text" name="acronym"><br>
+          </td>
+        </tr>
+        <tr>
+          <td >
+            <label>Trial Plan CSV File<span class="small">List of trial nodes, and attributes (mandatory)</span></label>
+          </td>
+          <td >
+            <input type="file" id='uploadFile_id' name="file">
+          </td>
+        </tr>
+      </table>
+      <input type="submit" value="Upload">
+    </fieldset>
+  </div>
 </form>
+{% endblock %}
+
+{% block dataHelp %}
+<div id=helpText class=dataContentHelp>
+
+<div class="description not_too_wide">
+  To create a trial you must, at a minimum, provide a name, and a list
+  of nodes for the trial. You can also provide a site, year, or
+  acronym for the trial if you wish. The list of nodes must be
+  provided as a comma separated (CSV) file, which must have the
+  following format:
+  <dl style="">
+    <dt>First line</dt><dd>Column Headers. There can be any number of
+    columns, but there must be a "row" and a "column" column, since
+    each node is identified by a row and column number.</dd>
+    <dt>Subsequent lines</dt><dd>Trial Nodes. Each line after the header line
+    identifies and describes one trial node. A node is identified by
+    its row and column values. Any values in other columns will be
+    stored as attribute values for the node (for the attribute
+    identified by the column header).
+</div>
+
+</div>
 {% endblock %}
