--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -1,3 +1,9 @@
+/*
+body {
+    height:100%;
+}
+*/
+
 
 button {
     color:green;
@@ -183,6 +189,11 @@ p a {
 	margin-top: 36px;
 }
 
+.description {
+    color: #585858;
+}
+
+
 #about {
 	width: 740px;
 	margin: 0 auto;
@@ -235,19 +246,98 @@ p a {
 
 #dataLeftBar {
     width: 150px;
+    min-width: 150px;
     display: table-cell;   
     vertical-align: top;    /* without this, vertical position is affected by html in dataContent (when using tables for equal column heights) */
     word-wrap: break-word;
-    background: #eee;
+    background: #eeeeee;
     padding-top: 20px;
     padding-bottom: 50px;
     /*float: left; an alternative to tables, but don't get equal column height*/
 }
 
-#dataContent {
+.dataContent {
     display: table-cell;
+    width: 100%;
     padding: 15px;
     word-wrap: normal;
     overflow: hidden; 
-    /* float: none; an alternative to tables, but don't get equal column height*/
+}
+
+.dataContentHelp{
+    vertical-align: top; 
+    display: table-cell;
+    color:green;
+    background: #ddeedd;
+    width: 250px;
+    min-width: 250px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-left: 10px;
+}
+.dataContentHelpButton{
+    vertical-align: top; 
+    display: table-cell;
+    color:green;
+    /*width: 250px;*/
+    width:100pc;   /* nb, pc is NOT percent, but one sixth inch, so this is just really big */
+    min-width: 250px;
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
+.dataContentTop {
+}
+/*
+.dataContentTop button {
+    align:right;
+    background:#111111;
+}
+*/
+/*** user input forms: ******************************************/
+
+
+
+.userInputForm button{
+clear:both;
+margin-left:150px;
+width:125px;
+height:31px;
+background:#666666 url(img/button.png) no-repeat;
+text-align:center;
+line-height:31px;
+color:#FFFFFF;
+font-size:11px;
+font-weight:bold;
+}
+
+.userInputForm td{
+vertical-align:top;
+}
+
+.userInputForm label{
+display:block;
+/*font-weight:bold;*/
+text-align:right;
+vertical-align:top;
+width:140px;
+float:left;
+}
+
+.userInputForm .small{
+color:#666666;
+display:block;
+font-size:11px;
+font-weight:normal;
+text-align:right;
+width:140px;
+}
+
+.userInputForm input, .userInputForm select{
+float:left;
+/*font-size:12px;
+padding:4px 2px;
+border:solid 1px #aacfe4;*/
+width:200px;
+margin:2px 0 20px 10px;
 }
