--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -1,24 +1,49 @@
 {% extends "dataPage.html" %}
 
 {% block dataContent %}
-<h2>Create New Trait</h2>
+<h2>Create New {% if trialId == 'sys' %}System{% else %}Trial{% endif %} Trait</h2>
 <div id="attributeData" data-attributes="{{attributesList}}">
   <form enctype="multipart/form-data"
         onsubmit="return ValidateTraitForm()"
         method="post">
 
-    Caption: <input type="text" id='cap_id' name="caption">
-    <p>Description: <input type="text" name="description">
-    <p><div id="traitDiv">
-        Trait Type: <select id='traitType' name='type'
-                            onchange="SetTraitFormElements('traitDiv',this.options[selectedIndex].value)">
-          <option value="-1" name="none">..Select a Trait Type..</option>
-          {% for typ, value in traitTypes.iteritems() %}
-          <option value="{{value|e}}" name={{typ|e}}>{{typ|e}}</option>
-          {% endfor %}
+    <fieldset>
+  <div class="userInputForm">
+      <table>
+        <tr>
+          <td >
+            <label>Caption<span class="small">Add a short trait name</span></label></td>
+          <td>
+            <input type="text" id='cap_id' name="caption"></td>
+        </tr>
 
-      </select></div>
+        <tr>
+          <td align="right">
+            <label>Description</label>
+          </td>
+          <td>
+            <input type="text" name="description">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div id="traitDiv">
+                <label>Trait Type</label></td>
+          <td><select id='traitType' name='type'
+                                    onchange="SetTraitFormElements('traitDiv',this.options[selectedIndex].value)">
+                  <option value="-1" name="none">..Select a Trait Type..</option>
+                  {% for typ, value in traitTypes.iteritems() %}
+                  <option value="{{value|e}}" name={{typ|e}}>{{typ|e}}</option>
+                  {% endfor %}
+                  </td></tr>
+              </select></div>
+          </td>
+        </tr>
+      </table>
     <p><input type="submit" value="Create Trait">
+  </div>
+    </fieldset>
 
   </form>
 </div>
