--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -36,19 +36,17 @@
     Note also we assume that if variable pagename is defined then 
     it specifies the page, and if not defined we are on the Home menu options
     #}
-	<ul id="headerMenu">
+    <ul id="headerMenu">
 
       {# Add UserData page if use is logged in: #}
       {% if loggedIn %}
-	  <li {% if pagename is not defined %} class="active" {% endif %}>
-        <a href={{ url_for('userHome', userName=g.userName) }}>User Data</a>
-      </li>
+      <li {% if pagename is not defined %} class="active" {% endif %}><a href={{ url_for('userHome', userName=g.userName) }}>User Data</a></li>
       {% endif %}
       
-	  <li {% if pagename == 'fieldprime' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='fieldprime') }}">FieldPrime</a></li>
-	  <li {% if pagename == 'news' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='news') }}">News</a></li>
-	  <li {% if pagename == 'about' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='about') }}">About</a></li>
-	  <li {% if pagename == 'contact' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='contact') }}">Contact</a></li>
+      <li {% if pagename == 'fieldprime' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='fieldprime') }}">FieldPrime</a></li>
+      <li {% if pagename == 'news' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='news') }}">News</a></li>
+      <li {% if pagename == 'about' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='about') }}">About</a></li>
+      <li {% if pagename == 'contact' %}class="active"{% endif %}><a href="{{ url_for('infoPage', pagename='contact') }}">Contact</a></li>
   </div>
   <!-- <hr> -->
 
