--- a/fpa/fp_web_admin/templates/dataPage.html
+++ b/fpa/fp_web_admin/templates/dataPage.html
@@ -16,12 +16,12 @@
   </div>
 
   <div class="dataContent">
-  {% block dataContent %}
-    {{content|safe}}
-  {% endblock %}
+      {% block dataContent %}
+      {{content|safe}}
+      {% endblock %}
   </div>
 
-  {% block dataHelp %}
+  {% block dataHelpPane %}
   {% endblock %}
 
 </div>
